--- a/pyCookbook/.settings/org.eclipse.core.resources.prefs
+++ b/pyCookbook/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/Chapter1/__init__.py=utf-8
+encoding//src/Chapter1/multi_replace.py=utf-8
+encoding//src/Chapter1/reindent.py=utf-8
+encoding//src/Chapter1/stringTemplate.py=utf-8
+encoding//src/Chapter1/structSubstr.py=utf-8
